minor readability changes
- replaced mutable Arrays.asList with immutable List.of